--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -531,6 +531,7 @@
         flex-wrap: wrap;
         @include md {
             font-size: 18px;
+            letter-spacing: -0.1rem;
         }
     }
 
@@ -638,15 +639,20 @@
 
     &__content {
         width: 48%;
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        gap: 1rem;
 
         @include md {
             width: 100%;
-            margin-top: 6rem;
-            padding-left: 3rem;
+            margin-top: 3rem;
+        }
+    }
+
+    &__description {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+        gap: 2rem;
+        @include md {
+            gap: 1rem;
         }
     }
 
@@ -654,9 +660,8 @@
         position: relative;
         display: inline-flex;
         align-items: flex-end;
-        justify-content: flex-end;
-        width: 4.6rem;
-        min-width: 4.6rem;
+        justify-content: flex-start;
+        gap: 1rem;
         line-height: 1;
         white-space: nowrap;
         word-break: normal;
@@ -664,17 +669,14 @@
     }
 
     &__step-label {
-        position: absolute;
-        left: 0.3rem;
-        bottom: 0.15rem;
-        display: block;
+        display: inline-block;
         font-family: "Oswald", sans-serif;
         font-size: 14px;
         font-weight: 700;
         line-height: 1;
         text-transform: lowercase;
-        transform: rotate(-90deg);
-        transform-origin: left bottom;
+        writing-mode: vertical-rl;
+        transform: rotate(180deg);
         background: linear-gradient(180deg, #6ccece 0%, #00d9f5 100%);
         -webkit-background-clip: text;
         background-clip: text;
@@ -682,10 +684,7 @@
         color: transparent;
         white-space: nowrap;
         word-break: normal;
-
-        @include md {
-            left: -1rem;
-        }
+        font-style: normal;
     }
 
     &__step-number {
@@ -702,17 +701,16 @@
         word-break: normal;
     }
 
-    &__description {
-        flex: 1;
-        min-width: 0;
-    }
 
     &__item-title {
         color: #003d3d;
-        font-size: 19px;
+        font-size: 20px;
         font-weight: 700;
         line-height: 1.45;
         letter-spacing: 0;
+        @include md {
+            font-size: 18px;
+        }
     }
 
     &__text {
@@ -723,9 +721,12 @@
         line-height: 1.5;
         letter-spacing: 1%;
         padding-right: 6rem;
+        padding-left: 6rem;
 
         @include md {
             padding-right: 0;
+            padding-left: 0;
+            margin-top: 3rem;
         }
     }
 }
